# cpp_nn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dockerfile  run.sh
src/: CMakeLists.txt  main.cpp
src/Accuracy/: accuracy.cpp  accuracy.h
src/Activations/: activations.cpp  activations.h
src/DataLoaders/: base_data_loader.h  fashion_mnist_loader.cpp  fashion_mnist_loader.h
src/Loss/: cross_entropy.cpp  cross_entropy.h
src/Network/: network.cpp  network.h
src/Trainer/: trainer.cpp  trainer.h
src/Utils/: utils.cpp  utils.h
